# cpp-ci-pipeline

./: .travis.yml  CMakeLists.txt  main.cpp  sonar-project.properties
test/: CalculadoraTesting.cpp  CalculadoraTesting.h
